<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_aboutus"
        android:title="@string/action_about_us"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contactus"
        android:title="@string/action_contact_us"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_changepassword"
        android:title="@string/action_change_password"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_serverinfo"
        android:title="@string/action_server_info"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sendemail"
        android:title="@string/action_send_email"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_appstats"
        android:title="@string/action_app_stats"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_customercare"
        android:title="@string/strCustomerCare"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_projectdiscussion"
        android:title="@string/strProjectDiscussion"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <!--<item-->
    <!--android:id="@+id/action_project_status_flow"-->
    <!--android:title="@string/action_project_status_flow"-->
    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/menu_progress"
        android:visible="false"
        app:showAsAction="always"
        app:actionLayout="@layout/progress_indeterminate"
        tools:ignore="AlwaysShowAction,UnusedAttribute" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/strSearch"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        app:showAsAction="always"
        android:orderInCategory="100"
        android:title="@string/strRefresh"
        android:icon="@drawable/ic_action_refresh" />
</menu>
