<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.UserInfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strWelcome"
        android:id="@+id/lblWelcome"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strUsername"
        android:id="@+id/txUsername"
        android:layout_toRightOf="@id/lblWelcome"
        android:textStyle="bold"
        android:textColor="@color/selector_link"
        android:textSize="16sp" />

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/strProjectStatus"-->
    <!--android:id="@+id/lblProjectStatus"-->
    <!--android:visibility="gone"-->
    <!--android:layout_below="@+id/lblWelcome"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="New"-->
    <!--android:id="@+id/tvProjectStatus"-->
    <!--android:layout_alignTop="@+id/lblProjectStatus"-->
    <!--android:layout_toRightOf="@+id/lblProjectStatus"-->
    <!--android:layout_toEndOf="@+id/lblProjectStatus"-->
    <!--android:visibility="gone" />-->

</RelativeLayout>
