<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.chungmin.helpu.activities.SearchActivity">

    <!--<ListView-->
    <!--android:id="@+id/list"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent" />-->

    <TextView
        android:id="@+id/tvNoItemFound"
        android:text="@string/strNoItemsFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>
